--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron: '50 4 * * 0'
+  # schedule:
+  #   - cron: '50 4 * * 0'
 
 jobs:
   build:
